# image_editor

./: CMakeLists.txt  Doxyfile  README.md
src/: filters.cpp  filters.h  image.cpp  image.h  main.cpp
tests/: test_filters.cpp
